@@ -712,7 +712,12 @@
                   <tr>
                     <td>NumPlayers</td>
 
-                    <td>Returns the number of players online which can be seen (no Cloaked)</td>
+                    <td>
+                    Returns the number of players online which can be seen (no Cloaked).  The ReqParm ALL can be given to return the number
+                    of cloaked and unclocked players online.  ReqParm TOTALCACHED will return the number of players who have logged in since
+                    boot.  ReqParm TOTAL will return the number of players in the database.  ReqParm ACCOUNTS will return the number of 
+                    accounts in the database. 
+                    </td>
                   </tr>
 
                   <tr>
